An inheritance of '-webkit-user-modify' does not stop at shadow boundary. https://bugs.webkit.org/show_bug.cgi?id=88514

Reviewed by Ryosuke Niwa.

Source/WebCore:

In StyleResolver::styleForElement(), we reset '-webkit-user-modify'
CSS property after inheriting a parent style, but that is not
enough.  We also have to reset '-webkit-user-modify' when we use a
cached result in applying matched properties.

Test: fast/dom/shadow/user-modify-inheritance.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::applyMatchedProperties):
(WebCore::StyleResolver::styleForElement):
* css/StyleResolver.h:
(StyleResolver):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::inheritFrom):
* rendering/style/RenderStyle.h:

LayoutTests:

* fast/dom/shadow/user-modify-inheritance-expected.txt: Added.
* fast/dom/shadow/user-modify-inheritance.html: Added.


Canonical link: https://commits.webkit.org/106585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119949 268f45cc-cd09-0410-ab3c-d52691b4dbfc